# cpp-patterns

./: CMakeLists.txt  main.cpp
src/: AbstractLogic.h  ComparatorFactory.cpp  ComparatorFactory.h  GateAnd.cpp  GateAnd.h  GateNot.cpp  GateNot.h  GateOr.cpp  GateOr.h  GateXor.cpp  GateXor.h  LogicInput.cpp  LogicInput.h  NegateFirstBooleanVisitor.cpp  NegateFirstBooleanVisitor.h  Visitor.h
